--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ main.person-layout {
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
+  max-width: 300px;
 }
 
 .card.movie-card {
